--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Welcome to our website! Explore engaging content while supporting us with ads.">
     <meta name="keywords" content="content, ads, support, website">
-    <meta name="author" content="Your Name">
+    <meta name="author" content="Pubzy">
     <title>Welcome to Our Website</title>
     <!-- Google AdSense Verification Script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5196514011677170" crossorigin="anonymous"></script>
@@ -74,10 +74,10 @@
             </script>
         </div>
 
-        <p>We aim to provide valuable content while maintaining a user-friendly experience. Check out our <a href="#">latest posts</a> or <a href="#">contact us</a> for inquiries.</p>
+        <p>We aim to provide valuable content while maintaining a user-friendly experience. Check out our <a href="https://www.youtube.com/@PubzyD">latest posts</a> or <a href="therubin31@gmail.com">contact us</a> for inquiries.</p>
     </main>
     <footer>
-        <p>&copy; 2025 Your Website Name. All rights reserved.</p>
+        <p>&copy; 2025 RBXRewards. All rights reserved.</p>
     </footer>
 </body>
 </html>
