--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Welcome to our website! Explore engaging content while supporting us with ads.">
     <meta name="keywords" content="content, ads, support, website">
     <meta name="author" content="Pubzy">
+    <meta name="google-adsense-account" content="ca-pub-5196514011677170">
     <title>RBXRewards</title>
     <!-- Google AdSense Verification Script -->
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5196514011677170" crossorigin="anonymous"></script>
